--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Landing Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <!-- bootstrap -->
+
+    <!-- fontawsome icons -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
 
@@ -18,20 +19,92 @@
   </head>
   <body>
     <header id="header">
-      <ul class="topnav">
-        <li>
-          <img
-            class="responsive-image vertical-align"
-            src="./original_trombones.png"
-            alt="Trombones Image"
-          />
-        </li>
-        <li class="right"><a href="#home">Features</a></li>
-        <li class="right"><a class="right" href="#news">How It Works</a></li>
-        <li class="right"><a href="#about">Pricing</a></li>
-      </ul>
-
+      <nav id="nav-bar">
+        <ul class="topnav">
+          <li>
+            <img
+              id="header-img"
+              class="responsive-image vertical-align"
+              src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+              alt="Trombones Image"
+            />
+          </li>
+          <li class="right nav-link"><a href="#features">Features</a></li>
+          <li class="right nav-link"><a href="#howitworks">How It Works</a></li>
+          <li class="right nav-link"><a href="#pricing">Pricing</a></li>
+        </ul>
+      </nav>
       <div style="padding:0 16px;"></div>
     </header>
+    <div class="center subtittle">
+      <h2>Handcrafted, home-made masterpieces</h2>
+      <form action="https://www.freecodecamp.com/email-submit" id="form">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Enter your email address"
+          target="_blank"
+          required
+        />
+        <input type="submit" id="submit" value="GET STARTED" />
+      </form>
+    </div>
+    <section id="features">
+      <div class="grid">
+        <div class="icons"><i class="fas fa-campground prueba"></i></div>
+        <div class="text-features">
+          <h3>Premium Materials</h3>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </div>
+        <div class="icons"><i class="fas fa-campground"></i></div>
+        <div class="text-features">
+          <h3>Premium Materials</h3>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </div>
+
+        <div class="icons"><i class="fas fa-campground"></i></div>
+        <div class="text-features">
+          <h3>Premium Materials</h3>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section id="howitworks">
+      <iframe
+        id="video"
+        src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+        height="315"
+        width="400"
+        framebroder="0"
+        allowfullscreen
+      >
+    </section>
+    <section id="pricing">
+      <div class="grid-pricing">
+        <div>
+          <h3>TENOR TROMBONE</h3>
+          <h2>$600</h2>
+          <p>Lorem ipsum.
+              Lorem ipsum.
+              Lorem ipsum dolor.
+              Lorem ipsum.</p>
+          <button>SELECT</button>
+        </div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+    <!-- freecodecamp test -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
