--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
     <!-- <script src="main.js"></script> -->
   </head>
   <body>
@@ -29,9 +34,15 @@
               alt="Trombones Image"
             />
           </li>
-          <li class="right nav-link"><a href="#features">Features</a></li>
-          <li class="right nav-link"><a href="#howitworks">How It Works</a></li>
-          <li class="right nav-link"><a href="#pricing">Pricing</a></li>
+          <li class="right nav-linkk">
+            <a class="nav-link" href="#features">Features</a>
+          </li>
+          <li class="right nav-linkk">
+            <a class="nav-link" href="#howitworks">How It Works</a>
+          </li>
+          <li class="right nav-linkk">
+            <a class="nav-link" href="#pricing">Pricing</a>
+          </li>
         </ul>
       </nav>
       <div style="padding:0 16px;"></div>
@@ -88,20 +99,28 @@
         framebroder="0"
         allowfullscreen
       >
+      </iframe>
     </section>
     <section id="pricing">
       <div class="grid-pricing">
-        <div>
+        <div class="pricing">
           <h3>TENOR TROMBONE</h3>
           <h2>$600</h2>
-          <p>Lorem ipsum.
-              Lorem ipsum.
-              Lorem ipsum dolor.
-              Lorem ipsum.</p>
+          <p>Lorem ipsum. Lorem ipsum. Lorem ipsum dolor. Lorem ipsum.</p>
           <button>SELECT</button>
         </div>
-        <div></div>
-        <div></div>
+        <div class="pricing">
+          <h3>BASS TROMBONE</h3>
+          <h2>$900</h2>
+          <p>Lorem ipsum. Lorem ipsum. Lorem ipsum dolor. Lorem ipsum.</p>
+          <button>SELECT</button>
+        </div>
+        <div class="pricing">
+          <h3>VALVE TROMBONE</h3>
+          <h2>$1200</h2>
+          <p>Lorem ipsum. Lorem ipsum. Lorem ipsum dolor. Lorem ipsum.</p>
+          <button>SELECT</button>
+        </div>
       </div>
     </section>
     <!-- freecodecamp test -->
